# slovo-voice-assistant

./: .env.example  .gitignore  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION.md  PHASE4_SUMMARY.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  test_execution_config.py
.github/: copilot-instructions.md
agent/: .env.example  MEMORY_RETRIEVAL.md  OPTIMIZATION_SUMMARY.md  README.md  console_orchestrator.py  demo_optimization.py  pyproject.toml  pyrightconfig.json  test_chat.py  test_conversation_history.py  test_conversation_simple.py  test_embed_dim.py  test_executor_memory.py  test_memory.py  test_optimization.py  test_qdrant_direct.py  test_qdrant_fix.py  test_sandbox_execution.py  test_semantic_write.py
agent/docs/: MEMORY.md
agent/scripts/: init_db.sql  phase4_tools.sql
agent/slovo_agent/: __init__.py  config.py  main.py
agent/slovo_agent/agents/: __init__.py  executor.py  explainer.py  intent.py  orchestrator.py  planner.py  tool_discovery.py  verifier.py
agent/slovo_agent/api/: __init__.py  chat.py  memory.py  routes.py
agent/slovo_agent/llm/: __init__.py  base.py  factory.py
agent/slovo_agent/llm/providers/: __init__.py  anthropic.py  openai.py
agent/slovo_agent/memory/: __init__.py  encryption.py  manager.py  postgres_repository.py  qdrant_repository.py  redis_repository.py  retrieval.py  writer.py
agent/slovo_agent/models/: __init__.py  base.py  memory.py  reasoning.py  tools.py
agent/slovo_agent/tools/: __init__.py  repository.py  sandbox.py
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  default.toml
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: agent.rs  commands.rs  error.rs  lib.rs  main.rs  tray.rs
desktop/src/components/: AgentStatus.css  AgentStatus.tsx  ConversationView.css  ConversationView.tsx  MemoryInspector.css  MemoryInspector.tsx  VoiceInput.css  VoiceInput.tsx
desktop/src/lib/: agent.ts  autostart.ts  memory.ts  tray.ts
desktop/src/store/: appStore.ts
desktop/src/styles/: App.css  index.css
tools/: README.md
tools/manifests/: README.md  tool-manifest.schema.json
tools/manifests/examples/: example-calculator.yaml  example-weather.yaml  web-search.manifest.json
tools/sandbox/: __init__.py  config.py  docker_runner.py
tools/sandbox/slovo_tools/: __init__.py
tools/templates/docker/: Dockerfile  README.md  main.py  manifest.json  requirements.txt
